fixed map container aligned center therefore losing height

--- a/style.css
+++ b/style.css
@@ -593,7 +593,6 @@ input:checked + .slider:before {
   .container {
     width: 110rem;
     justify-content: center;
-    align-items: center;
   }
 
   .switch {
